fix: align token name with design (#1630)
* fix: align token name with design

* refactor: readd deprecated token to prevent breaking changes

--- a/src/components/Heading/Heading.module.css
+++ b/src/components/Heading/Heading.module.css
@@ -79,7 +79,7 @@
   color: var(--eds-theme-color-text-utility-error);
 }
 .heading--brand {
-  color: var(--eds-theme-color-text-brand-primary);
+  color: var(--eds-theme-color-text-brand-default);
 }
 /* stylelint-disable-next-line eds/no-tier-1-color-variable */
 .heading--info {
