--- a/src/tokens-dist/css/variables.css
+++ b/src/tokens-dist/css/variables.css
@@ -211,7 +211,8 @@
   --eds-theme-color-text-grade-revise: #21272D;
   --eds-theme-color-text-grade-stop: #BD0044;
   --eds-theme-color-text-disabled: #C0C4C8;
-  --eds-theme-color-text-brand-primary: #5751D2;
+  --eds-theme-color-text-brand-default: #5751D2;
+  --eds-theme-color-text-brand-primary: #5751D2; /* deprecated */
   --eds-theme-color-transparent-black-0: rgba(0, 0, 0, 0);
   --eds-theme-color-transparent-black-30: rgba(0, 0, 0, .3);
   --eds-theme-color-transparent-white-0: rgba(255, 255, 255, 0);
